trying to console.log the button clicks

--- a/pages/browse/browse.html
+++ b/pages/browse/browse.html
@@ -8,7 +8,7 @@
 <div class="browse" id="browse">
   <div class="browseContainer">
     <div class="browseImage1">
-      <div class="button view">VIEW</div>
+      <div id="view" class="button view">VIEW</div>
     </div>
     <div class="browseContentContainer">
       <div class="browseContent1">
@@ -19,8 +19,8 @@
         private cave!
       </div>
       <div class="buttonHolder">
-        <div class="button">EDIT</div>
-        <div class="button">DELETE</div>
+        <div id="edit" class="button">EDIT</div>
+        <div id="delete" class="button">DELETE</div>
       </div>
     </div>
   </div>
